refactor consume bLion
