# docs/swagger.yaml
@@ -101,6 +101,8 @@ definitions:
         type: string
       description:
         type: string
+      expires_at:
+        type: string
       files:
         items:
           $ref: '#/definitions/credentials.File'
@@ -191,6 +193,10 @@ definitions:
         type: number
       data:
         type: string
+      files:
+        items:
+          $ref: '#/definitions/credentials.File'
+        type: array
       from:
         type: string
       id:
@@ -318,10 +324,6 @@ definitions:
         type: string
       recovery_account_at:
         type: string
-      rsa_private:
-        type: string
-      rsa_public:
-        type: string
       status_id:
         type: integer
       updated_at:
@@ -343,13 +345,7 @@ definitions:
         type: string
       mnemonic:
         type: string
-      rsa_private:
-        type: string
-      rsa_private_device:
-        type: string
       rsa_public:
-        type: string
-      rsa_public_device:
         type: string
       status_id:
         type: integer
@@ -419,9 +415,7 @@ definitions:
       code:
         type: integer
       data:
-        items:
-          $ref: '#/definitions/models.Wallet'
-        type: array
+        $ref: '#/definitions/models.Wallet'
       error:
         type: boolean
       msg:
